Add icons and links to my linkedin and github

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,7 +9,14 @@
   </head>
   <body>
     <div id="content">
-      <h1>Welcome to My Portfolio</h1>
+      <h1>Eyad Alsilimy
+        <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
+         <img alt="linkedin" src="images/linked.jpg" width="25" height="25">
+        </a>
+        <a href="https://www.github.com/alsile/">
+         <img alt="github" src="images/gitfr.png" width="25" height="25">
+        </a> 
+      </h1>
       <p>&emsp;&emsp;I spent the first part of my STEP internship working on it. I am a rising junior in Electrical Engineering with a focus in Embedded Systems. I hope to provide as much value to
         the world as I can. I think I am going to do this through technology. I am Egyptian with
         Canadian citizenship, living in America.I love a lot of things, especially when they involve others.
