Correct specified errors in pull request and add home photo

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,27 +5,28 @@
     <title>Eyad Alsilimy</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <style> h1 {text-align: center;} </style>
   </head>
   <body>
     <div id="content">
       <h1>Eyad Alsilimy
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
-         <img alt="linkedin" src="images/linked.jpg" width="25" height="25">
+          <img alt="linkedin" src="images/linkedin.jpg" width="25" height="25">
         </a>
         <a href="https://www.github.com/alsile/">
-         <img alt="github" src="images/gitfr.png" width="25" height="25">
+          <img alt="github" src="images/github.png" width="25" height="25">
         </a> 
       </h1>
-      <p>&emsp;&emsp;I spent the first part of my STEP internship working on it. I am a rising junior in Electrical Engineering with a focus in Embedded Systems. I hope to provide as much value to
-        the world as I can. I think I am going to do this through technology. I am Egyptian with
-        Canadian citizenship, living in America.I love a lot of things, especially when they involve others.
-        I end spending my free time watching youtube about various things (educational and interesting),
-        playing video games (LoL, CSGO, RotMG), and hanging out with friends. I love talking about music and
-        am currently avidly listen to artist like Playboi Carti, Giveon, Travis Scott, and Gunna.</p>
+      <img src="images/eyadhome.png" alt="pyramids" class="center" style="width:660px;">
+      <p>&emsp;&emsp;I spent the first part of my STEP internship working on it. I am a rising junior in 
+          Electrical Engineering with a focus in Embedded Systems. I hope to provide as much value to  
+          the world as I can. I think I am going to do this through technology. I am Egyptian with
+          Canadian citizenship, living in America.I love a lot of things, especially when they involve others.
+          I end spending my free time watching youtube about various things (educational and interesting),
+          playing video games (LoL, CSGO, RotMG), and hanging out with friends. I love talking about music and
+          am currently avidly listen to artist like Playboi Carti, Giveon, Travis Scott, and Gunna.</p>
       <p></p>
-      <p>Click here to get a random motto I live by:</p>
-      <button onclick="addRandomQuote()">Hello</button>
+      <p>Click below to get a random motto I live by:</p>
+      <button onclick="addRandomQuote()">Click</button>
       <div id="quote-container"></div>
       <figure>
         <img src="images/newcarti.jpg"
@@ -45,7 +46,7 @@
              style="width:150px;height:200px;">
         <figcaption>Travis Scott</figcaption>
       </figure>
-            <figure>
+      <figure>
         <img src="images/newgunna.jpg"
              alt="Gunna"
              style="width:150px;height:200px;">
