Rearrange info into pages and add navbar

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -10,13 +10,13 @@
       <nav>
         <ul class="nav-links">
           <li>
-              <strong style="font-size:22px;">Home</strong>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="aboutme.html">About Me</a>
           </li>
           <li>
-            <a href="projects.html">Projects</a>
+            <strong style="font-size:22px;">Projects</strong>
           </li>
           <li>
             <a href="resume.html">Resume</a>
@@ -26,7 +26,7 @@
           </li>
         </ul>
       </nav>
-      <h1>Eyad Alsilimy
+      <h1>Projects
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
           <img alt="linkedin" src="images/linkedin.jpg" width="50" height="50">
         </a>
@@ -34,7 +34,6 @@
           <img alt="github" src="images/github.png" width="50" height="50">
         </a> 
       </h1>
-      <img src="images/eyadhome.png" alt="eyadhome" class="center" style="width:660px;">
     </div>
   </body>
 </html>
