Resolve previous errors from pull request, upload resume, add projects, world image, edit icons, dark mode feature, cyle through quotes, remove random quote feature.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Eyad Alsilimy</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
@@ -26,15 +27,21 @@
           </li>
         </ul>
       </nav>
+      <br></br>
       <h1>Eyad Alsilimy
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
-          <img alt="linkedin" src="images/linkedin.jpg" width="50" height="50">
+          <img alt="linkedin" src="images/newlinkedin.png" width="50" height="50">
         </a>
         <a href="https://www.github.com/alsile/">
-          <img alt="github" src="images/github.png" width="50" height="50">
+          <img alt="github" src="images/newgithub.png" width="50" height="50">
         </a> 
       </h1>
+      <br></br>
       <img src="images/eyadhome.png" alt="eyadhome" class="center" style="width:660px;">
+      <br></br>
+      <button width="10%" font-size="18px" class="center" onclick="toggleDarkMode()">
+          Toggle Dark Mode
+      </button>
     </div>
   </body>
 </html>
