--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Eyad Alsilimy</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
@@ -26,14 +27,57 @@
           </li>
         </ul>
       </nav>
+      <br></br>
       <h1>Projects
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
-          <img alt="linkedin" src="images/linkedin.jpg" width="50" height="50">
+          <img alt="linkedin" src="images/newlinkedin.jpg" width="50" height="50">
         </a>
         <a href="https://www.github.com/alsile/">
-          <img alt="github" src="images/github.png" width="50" height="50">
+          <img alt="github" src="images/newgithub.png" width="50" height="50">
         </a> 
       </h1>
+      <br></br>
+      <h3>This portfolio!</h3>
+      <p>I was given some starter code that gave me some text and a script for
+          generating a random quotes, the rest was all me. Well, all me with
+          the help of various youtube videos, stackoverflow, and w3school posts.
+          This was my first project in full stack and I learned a lot. A big
+          takeaway for me was that I am able to understand way more than I thought.
+          A lot of stuff still goes over my head, but not as much as I would have guessed.
+      </p>
+      <br></br>
+      <h3>Setting up Festival (C++ text-to-speech library)</h3>
+      <p>The goal was to use Festival to read important in-flight data aloud at
+          ground control. The setup for the library took a lot of time. I learned
+          a lot about how using and developing code looks like outside of the
+          classroom. In my classes, setting up a library is the one of the easiest
+          steps because that usually isn't the purpose of the assignment. After
+          working to set up Festival, I realized that in the real world, building
+          code can be done collbartively, but there isn't a "teacher" that "gets you started".
+          Thus, I developed a lot of autonomous problem-solving skills like googling things.
+      </p>
+      <br></br>
+      <h3>Flashcards</h3>
+      <p>Flashcards was a project to introduce me to Android Studio. The final version
+          is an app that allows you to input questions and their answer. Once recorded,
+          users can swipe through cards and try to answer the question. They can check
+          their answer by tapping the card, revealing the answer. Learning to make
+          this portfolio was definitely easier because of that experience.
+          I could see patterns for what seems to be standard across languages.
+      </p>
+      <br></br>
+      <h3>Mastermind</h3>
+      <p>The game is slightly complicated, if you want to learn more click
+          <a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)">here</a>.
+           I recreated the game on a circuit board using switches and buttons to
+           emulate the physical pins. The whole thing is written in SystemVerilog,
+           which definitely took some getting used to. I learned a lot about how 
+           writing software is different from "writing hardware".
+      </p>
+      <br></br>
+      <button width="10%" font-size="18px" class="center" onclick="toggleDarkMode()">
+          Toggle Dark Mode
+      </button>
     </div>
   </body>
 </html>
