--- a/portfolio/src/main/webapp/resume.html
+++ b/portfolio/src/main/webapp/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Eyad Alsilimy</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
@@ -26,14 +27,21 @@
           </li>
         </ul>
       </nav>
+      <br></br>
       <h1>Resume
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
-          <img alt="linkedin" src="images/linkedin.jpg" width="50" height="50">
+          <img alt="linkedin" src="images/newlinkedin.jpg" width="50" height="50">
         </a>
         <a href="https://www.github.com/alsile/">
-          <img alt="github" src="images/github.png" width="50" height="50">
+          <img alt="github" src="images/newgithub.png" width="50" height="50">
         </a> 
       </h1>
+      <br></br>
+      <img alt="resume" src="images/resume.png" width="660" style="text-decoration:none;">
+      <br></br>
+      <button width="10%" font-size="18px" class="center" onclick="toggleDarkMode()">
+          Toggle Light/Dark Mode
+      </button>
     </div>
   </body>
 </html>
