add translation feature

--- a/portfolio/src/main/webapp/projects.html
+++ b/portfolio/src/main/webapp/projects.html
@@ -30,7 +30,7 @@
       <br></br>
       <h1>Projects
         <a href="https://www.linkedin.com/in/eyadalsilimy/" style="text-decoration:none;">
-          <img alt="linkedin" src="images/newlinkedin.jpg" width="50" height="50">
+          <img alt="linkedin" src="images/newlinkedin.png" width="50" height="50">
         </a>
         <a href="https://www.github.com/alsile/">
           <img alt="github" src="images/newgithub.png" width="50" height="50">
