--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -44,8 +44,18 @@
         <br>
         <ul id="console-output"></ul>
         <br>
+        <label for="language">Language:</label>
+          <select id="language" name="language">
+            <option value="">Language</option>
+            <option value="en">English</option>
+            <option value="ar">Arabic</option>
+            <option value="fr">French</option>
+            <option value="es">Spanish</option>
+            <option value="zh">Chinese</option>
+            <option value="hi">Hindi</option>
+          </select>
         <label for="limit">Number of visible comments:</label>
-        <input style="width:5%;" type="number" name="limit" placeholder="5" min="0"></input>  
+        <input style="width:5%;" type="number" name="limit" id="num-comments" placeholder="5" min="0"></input type="submit">  
         <br>      
         <label for="input">Leave a comment:</label>      
         <input style="width:50%;" type="string" name="input"></input>
